# owntinfoil

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: deploy.yml  pr_lint.yml
app/: client.py  generate_tfl.py  main.py
app/config/: __init__.py  base.py
